--- a/README.Rmd
+++ b/README.Rmd
@@ -2,13 +2,16 @@
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit THIS file. -->
+<!-- README.md is generated from README.Rmd. Please edit THIS (Rmd) file. -->
 
-```{r setup, include = FALSE}
+```{r preamble, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  fig.path = "inst/pix/README-"
 )
+
+library(unikn)  # loads the package
 ```
 
 # unikn
@@ -16,7 +19,7 @@ knitr::opts_chunk$set(
 <!-- uni.kn logo and link: -->  
 <!-- ![](./inst/pix/logo.svg) --> 
 <a href="https://www.uni.kn/">
-<img src = "./inst/pix/logo_min.png" alt = "uni.kn" style = "width: 300px; float: right; border:30;"/>
+<img src = "./inst/pix/logo_min.png" alt = "uni.kn" width = "300px" align = "right" style = "width: 300px; float: right; border:30;"/>
 </a>
 
 The `unikn` package provides some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design in R.
@@ -25,15 +28,69 @@ See the official [brand information](https://www.uni-konstanz.de/en/university/n
 **Corporate Design Manual** [(pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details. 
 
 
+## Installation
+
+The current development version can be installed from its [GitHub](https://github.com) repository at <https://github.com/hneth/unikn/>: 
+
+```{r install_github, echo = TRUE, eval = FALSE}
+# install.packages('devtools')
+devtools::install_github('hneth/unikn')
+
+library(unikn)  # loads the package
+```
+
+
 ## Colors
 
 A distinctive and recognizable color scheme is the most obvious element of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design.
 
-Our current definitions are based on the following sources:
+### Basic color palette
 
-- Basic colors are specified in the **Corporate Design Manual** [(pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf)
+Basic color palettes are specified according to the **Corporate Design Manual** [(pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf):
 
-- Additional colors are defined in an Excel file on [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/)
+```{r pal_unikn, eval = FALSE}
+# Default color palette:
+pal_unikn      # 10 default colors (web/sRGB)
+
+# Plot a color palette:
+plot_pal(pal = pal_unikn)
+```
+
+<img src = "./inst/pix/pal_unikn.png" alt = "pal_unikn" style = "width: 800px; border:10;"/>
+
+### Additional color palettes
+
+Additional colors are defined in an Excel file on [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/)
+
+```{r pal_additional}
+pal_seeblau
+pal_peach
+# etc.
+```
+
+Using all preferred colors:
+
+```{r pal_unikn_pref}
+# Using preferred colors:
+pal_unikn_pref             # color palette of preferred colors
+pal_unikn_pref[1]          # preferred (named) color 1
+pal_unikn_pref[[1]]        # color value 1: #59C7EB"
+pal_unikn_pref["seeblau"]  # preferred color by name
+```
+
+### Subsets of a color palette
+
+When only a subset of a color palette are needed, the function `pal_n` provides a reasonable subset of a known color palette:
+
+```{r}
+# From pal_unikn:
+pal_n(n = 2)
+pal_n(n = 4)
+
+# From pal_seeblau:
+pal_n(n = 1, pal = pal_seeblau)
+pal_n(n = 4, pal = pal_seeblau)
+```
 
 
 ## Note
@@ -41,6 +98,15 @@ Our current definitions are based on the following sources:
 We aim for an authentic representation of a highly-specified corporate design. While very rigid specifications may be appropriate for novices, they can also cause frustration in experts. Hence, we occasionally allow ourselves some liberties, mostly by imposing fewer restrictions. Examples include: 
 
 - We use the term "color", rather than "colour".
+
+
+## References
+
+Color definitions are based on the following sources:
+
+- [Corporate Design Manual (pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf)
+
+- [Colours for complex graphics (xls)](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/)
 
 
 <!-- Update: -->
