--- a/README.Rmd
+++ b/README.Rmd
@@ -16,17 +16,30 @@ library(unikn)  # load package
 
 # unikn
 
+<!-- unikn logo and link: -->  
+
+The `unikn` package facilitates the use of some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design for users of [R](https://www.r-project.org/). 
+
+
+## Motivation
+
 <!-- uni.kn logo and link: -->  
 <!-- ![](./inst/pix/logo.svg) --> 
 <a href="https://www.uni.kn/">
 <img src = "./inst/pix/logo_min.png" alt = "uni.kn" width = "300px" align = "right" style = "width: 300px; float: right; border:30;"/>
 </a>
 
-The `unikn` package provides some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design in R.
+<!-- unikn CD: --> 
 
-See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
-**Corporate Design Manual** [(pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details. 
+In 2014, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable corporate design. 
+Its key component is the consistent use of a `seeblau` color and a corresponding color palette that blends various shades of `seeblau` with black-and-white colors and text elements. See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
+[Corporate Design Manual (pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details. 
 
+<!-- Goals of unikn pgk: --> 
+
+The `unikn` package aims to facilitate the use of some design elements for users of [R](https://www.r-project.org/). 
+While the correct use of default specifications should be simple and straightforward, 
+we also allow some flexibility for expert users (e.g., for the creation of scientific visualizations).
 
 ## Installation
 
