--- a/README.Rmd
+++ b/README.Rmd
@@ -32,8 +32,9 @@ The `unikn` package facilitates the use of some elements of the [University of K
 <!-- unikn CD: --> 
 
 In 2014, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable corporate design. 
-Its key component is the consistent use of a `seeblau` color and a corresponding color palette that blends various shades of `seeblau` with black-and-white colors and text elements. See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
-[Corporate Design Manual (pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details. 
+Its key component is the consistent use of a `seeblau` color and a corresponding color palette that blends various shades of `seeblau` with black-and-white colors and text elements. 
+(See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
+[Corporate Design Manual (pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details.) 
 
 <!-- Goals of unikn pgk: --> 
 
@@ -54,26 +55,25 @@ library(unikn)  # loads package
 
 ## Colors
 
-A distinctive and recognizable color scheme is the most obvious element of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design.
+A distinctive and recognizable color scheme is the most obvious element of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design. 
 
 ### Basic color palettes
 
 Basic color palettes are specified according to the **Corporate Design Manual** [(pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf):
 
-1. Default color palette (`pal_unikn`):
+- Primary and default color palette (`pal_unikn`):
 
 ```{r pal_unikn, eval = FALSE}
-# Default color palette:
+# Default color palette: ----- 
 pal_unikn  # 10 default colors (web/sRGB)
 
-# Plot color palette:
-plot_pal(pal = pal_unikn)
+# Plot color palette: ----- 
+plot_pal(pal_unikn)
 ```
 
 <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
 
-2. Secondary color palette (`pal_unikn_ppt`): 
-An alternative color palette with more muted colors (intended for PowerPoint presentations) is provided as `pal_unikn_ppt`. 
+- Secondary color palette (`pal_unikn_ppt`): An alternative color palette with more muted colors (intended for PowerPoint presentations) is provided as `pal_unikn_ppt`. 
 
 ### Extension
 
@@ -81,10 +81,10 @@ Adding the darkest seeblau color (from `pal_seeblau[5]`) to the front of `pal_un
 into the middle of a symmetrical color palette `pal_unikn_plus` (with 11 colors): 
 
 ```{r pal_unikn_plus, eval = FALSE}
-# Extended unikn color palette: 
+# Extended unikn color palette: ----- 
 pal_unikn_plus  # 11 colors (white in middle)
 
-# Plot color palette:
+# Plot color palette: ----- 
 plot_pal(pal_unikn_plus)
 ```
 
@@ -92,10 +92,12 @@ plot_pal(pal_unikn_plus)
 
 ### Additional color palettes
 
-The following additional color palettes are defined in an Excel file on [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/) 
+The following dedicated color palettes are defined in an Excel file on [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/) 
 and provided here by the following color palettes: 
 
 ```{r pal_additional, eval = FALSE}
+# 8 mono-tone palettes: ----- 
+# Name:          Nr:           Tone:          
 pal_seeblau      # 5 shades of seeblau
 pal_peach        # 5           peach
 pal_grau         # 5           grau
@@ -104,6 +106,8 @@ pal_seegruen     # 5           seegruen
 pal_karpfenblau  # 5           karpfenblau
 pal_pinky        # 5           pink
 pal_Bordeaux     # 5           Bordeaux
+
+# 1 signal (Ampel) palette: ----- 
 pal_signal       # 3           Ampel
 ```
 
@@ -111,18 +115,27 @@ Each color palette contains a preferred color.[^1]
 All preferred colors are contained in a corresponding color palette `pal_unikn_pref`: 
 
 ```{r pal_unikn_pref, eval = FALSE}
-# Using preferred colors:
+# Using preferred colors: ----- 
 pal_unikn_pref             # color palette of preferred colors
 pal_unikn_pref[1]          # preferred (named) color 1
 pal_unikn_pref[[1]]        # color value 1: #59C7EB"
 pal_unikn_pref["seeblau"]  # preferred color by name
-
-# Plot color palette:
-plot_pal(pal_unikn_plus)
 ```
 
 [^1]: Whereas the official definition does not identify a preferred color for the Ampel color palette (`pal_signal`), 
 we provide its alert color (i.e., `pal_signal[2]`) as a designated color `signal`. 
+
+Additional pre-defined color palettes include:
+
+```{r pal_unikn_more, eval = FALSE}
+# Plot additional color palettes: ----- 
+plot_pal(pal_unikn_pref)   # palette of  9 preferred colors
+plot_pal(pal_unikn_light)  # palette of  8 light colors (in 4 pairs)
+plot_pal(pal_unikn_dark)   # palette of  8 dark colors (in 4 pairs)
+plot_pal(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
+```
+
+More flexible and complex color palettes can be created by using the `col_scale()` function. 
 
 
 ## Functions
@@ -132,6 +145,7 @@ we provide its alert color (i.e., `pal_signal[2]`) as a designated color `signal
 The `plot_pal()` function provides a quick overview over the contents of a color palette and allows comparisons between color palettes: 
 
 ```{r plot_pal, eval = FALSE}
+# Plot a color palette: ----- 
 plot_pal(pal_unikn_pref)
 ```
 
@@ -142,11 +156,11 @@ plot_pal(pal_unikn_pref)
 When only a subset of a color palette are needed, the `pal_n()` function provides a reasonable subset of a known color palette:
 
 ```{r pal_n, eval = TRUE}
-# From pal_unikn (default):
+# From pal_unikn (default): ----- 
 pal_n(n = 2)
 pal_n(n = 4)
 
-# From pal_seeblau:
+# From pal_seeblau: ----- 
 pal_n(n = 1, pal = pal_seeblau)
 pal_n(n = 4, pal = pal_seeblau)
 ```
@@ -159,6 +173,7 @@ This serves 2 main functions:
 1. Extending existing color palettes (to arbitrary lengths):
 
 ```{r col_scale_1, eval = FALSE}
+# Extending color palettes: ----- 
 plot_pal(col_scale()(20))
 plot_pal(col_scale(pal_seeblau)(10))
 plot_pal(col_scale(pal_Bordeaux)(10))
@@ -177,7 +192,7 @@ New color palettes of arbitrary length can be created by combining colors (from 
 and the desired resolution of the color gradient (as an integer argument): 
 
 ```{r col_scale_2, eval = FALSE}
-# Combining colors:
+# Combining colors: ----- 
 plot_pal(col_scale(c(seeblau, "white", pinky))(10)) 
 plot_pal(col_scale(c(signal, petrol))(10))  
 plot_pal(col_scale(c(Bordeaux, "white", petrol))(10)) 
@@ -196,7 +211,7 @@ plot_pal(col_scale(c(karpfenblau, seeblau, "gold"))(10))
 For best results, consider combining existing color palettes and individual colors into new color palettes: 
 
 ```{r col_scale_3, eval = FALSE}
-# Combining color palettes (and colors):
+# Combining color palettes (and colors): ----- 
 plot_pal(col_scale(c(rev(pal_seeblau), "white", pal_pinky))(11))
 plot_pal(col_scale(c(rev(pal_seeblau), "white", pal_petrol))(11))
 plot_pal(col_scale(c(rev(pal_petrol),  "white", pal_Bordeaux))(11))
