--- a/README.Rmd
+++ b/README.Rmd
@@ -361,12 +361,25 @@ Key text functions include:
 <img src = "./inst/pix/todo_pinky4.png" alt = "ToDo" width = "150px" style = "width: 150px; border:10;"/>
 <img src = "./inst/pix/box_unikn.png"   alt = "unikn::" width = "150px" style = "width: 150px; border:10;"/>
 
+
+### Image sizes
+
 Note that text is rendered graphically and does not scale when merely re-sizing bitmap images. 
-Hence, to preserve the crisp look of the original plots, plots should be generated and viewed in the desired size (in R) and displayed without further scaling (in other media):[^2] 
+Hence, to preserve the look of the original plots, plots should be generated and viewed in the desired size (in R) and displayed without further scaling (in other media):[^2] 
 
-<img src = "./inst/pix/hn_petrol4.png"  alt = "hn" width = "250px" style = "width: 250px; border:10;"/> 
+[^2]: Depending on the designated output format, scaling down (to smaller image sizes) is possible, whereas scaling up (to larger image sizes) typically causes loss of image quality.
 
-[^2]: Depending on the designated output format, scaling down (to smaller image sizes) is possible, whereas scaling up (to bigger image sizes) incurs loss of image quality. 
+For instance, the following image was generated and saved as an image with 250 x 250 pixels. If displayed in this size, it looks crisp and clear:
+
+<img src = "./inst/pix/box_contact.png"  alt = "address box (original size)" width = "250px" style = "width: 250px; border:10;"/> 
+
+Using a smaller image size can still work, as long as fonts remain legible:
+
+<img src = "./inst/pix/box_contact.png"  alt = "address box (smaller size)" width = "150px" style = "width: 150px; border:10;"/> 
+
+However, using a larger image size shows a clear loss of image quality:
+
+<img src = "./inst/pix/box_contact.png"  alt = "address box (larger size)" width = "350px" style = "width: 350px; border:10;"/> 
 
 
 
